# backtesting-engine-risk-controls

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backtester/: __init__.py  cli.py  config.py  data.py  engine.py  metrics.py  models.py  risk.py  strategies.py
backtesting_engine_risk_controls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: sample_prices.csv
tests/: test_cli.py  test_config.py  test_data.py  test_engine.py  test_metrics.py  test_risk.py  test_strategies.py
